--- a/layouts/partials/blox/resume-awards.html
+++ b/layouts/partials/blox/resume-awards.html
@@ -15,26 +15,41 @@
 
 <div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center">
 
+    <!-- 1. 保留原 block title -->
     <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
       {{ $block.content.title | markdownify | emojify }}
     </div>
   
-    <div class="w-full flex flex-col gap-2">
+    <!-- 4. 每个 item 之间间距放大到 gap-6 -->
+    <div class="w-full flex flex-col gap-6">
       {{ if $awards }}
+        <!-- 1. 准备一组多样化的 emoji -->
+        {{ $emojis := slice "🏆" "🎓" "🥇" "🏅" "🎖️" "✨" }}
+  
         {{ range $idx, $award := sort $awards ".date_start" "desc" }}
-          {{/* format date or show “Present” if no date */}}
+          {{/* 计算日期，若无则显示 Present */}}
           {{ $date := "" }}
           {{ with $award.date }}
             {{ $date = (time .) | time.Format ($block.design.date_format | default "January 2006") }}
           {{ else }}
             {{ $date = i18n "present" | default "Present" }}
           {{ end }}
-          <div class="text-gray-700 dark:text-gray-300">
-            {{ $date }}&nbsp;&nbsp;&nbsp;{{ $award.title }} (by {{ $award.awarder }})
+          <!-- 根据索引选取 emoji -->
+          {{ $emoji := index $emojis (mod $idx (len $emojis)) }}
+  
+          <div class="mb-6">
+            <!-- 2. date & title 加粗，黑色 -->
+            <p class="font-bold text-black dark:text-white">
+              {{ $emoji }} {{ $date }}&nbsp;&nbsp;{{ $award.title | markdownify | emojify }}
+            </p>
+            <!-- 3. awarder 放到第二行，灰色小字 -->
+            <p class="text-gray-500 dark:text-gray-400 text-sm">
+              by {{ $award.awarder | markdownify }}
+            </p>
           </div>
         {{ end }}
       {{ end }}
     </div>
-  
   </div>
+  
   
