--- a/layouts/partials/blox/resume-awards.html
+++ b/layouts/partials/blox/resume-awards.html
@@ -41,7 +41,7 @@
           <div class="mb-6">
             <!-- 2. date & title 加粗，黑色 -->
             <p class="font-bold text-black dark:text-white">
-             {{ $date }}&nbsp;&nbsp;&nbsp;&nbsp;{{ $emoji $award.title | markdownify | emojify }}
+             {{ $date }}&nbsp;&nbsp;&nbsp;&nbsp;{{ $emoji }} {{$award.title | markdownify | emojify }}
             </p>
             <!-- 3. awarder 放到第二行，灰色小字 -->
             <p class="text-gray-500 dark:text-gray-400 text-sm">
