--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="{{ "css/awards.css" | relURL }}">
+<link rel="icon" href="{{ "icon.jpg" | relURL }}" type="image/x-icon" />
