--- a/layouts/partials/blox/academic-service.html
+++ b/layouts/partials/blox/academic-service.html
@@ -15,24 +15,21 @@
 
 {{ $services := $person_page.Params.service }}
 
-<div class="flex flex-col items-center max-w-prose mx-auto gap-4 justify-center">
 
   <!-- Block Title -->
   <!-- <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
     {{ $block.content.title | markdownify | emojify }}
   </div> -->
 
+<div class="flex flex-col items-center w-full px-4 md:max-w-prose mx-auto gap-4">
   <h3 class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">{{ i18n "academic service" | default "Academic Service" }}</h3>
-
-  <!-- Academic‑Service Entries -->
+  
   <div class="w-full flex flex-col gap-6">
     {{ range $services }}
-      <div class="grid grid-cols-[auto,1fr] gap-2">
-        <!-- Title -->
-        <div class="font-semibold text-gray-900 dark:text-white min-w-max">
+      <div class="grid grid-cols-1 md:grid-cols-[minmax(auto,200px),1fr] gap-2 md:gap-4">
+        <div class="font-semibold text-gray-900 dark:text-white break-words md:truncate">
           {{ .title | markdownify | emojify }}
         </div>
-        <!-- Content -->
         <div class="text-gray-700 dark:text-gray-300 prose">
           {{ .content | markdownify | emojify }}
         </div>
