--- a/layouts/partials/blox/academic-service.html
+++ b/layouts/partials/blox/academic-service.html
@@ -21,7 +21,7 @@
     {{ $block.content.title | markdownify | emojify }}
   </div> -->
 
-<div class="flex flex-col items-center w-full px-4 md:max-w-prose mx-auto gap-4">
+<div class="flex flex-col items-center w-full px-4 md:max-w-prose mx-auto gap-4 justify-center">
   <h3 class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">{{ i18n "academic service" | default "Academic Service" }}</h3>
   
   <div class="w-full flex flex-col gap-6">
