--- a/layouts/partials/blox/academic-service.html
+++ b/layouts/partials/blox/academic-service.html
@@ -21,10 +21,12 @@
     {{ $block.content.title | markdownify | emojify }}
   </div> -->
 
-<div class="flex flex-col items-center w-full px-4 md:max-w-prose mx-auto gap-4 justify-center">
+<!-- <div class="flex flex-col items-center w-full px-4 md:max-w-prose mx-auto gap-4 justify-center"> -->
+<div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center">
+
   <h3 class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">{{ i18n "academic service" | default "Academic Service" }}</h3>
   
-  <div class="w-full flex flex-col gap-6">
+  <div class="w-full flex flex-col gap-3">
     {{ range $services }}
       <div class="grid grid-cols-1 md:grid-cols-[minmax(auto,200px),1fr] gap-2 md:gap-4">
         <div class="font-semibold text-gray-900 dark:text-white break-words md:truncate">
