--- a/layouts/partials/blox/resume-awards.html
+++ b/layouts/partials/blox/resume-awards.html
@@ -20,7 +20,7 @@
     <!-- <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
       {{ $block.content.title | markdownify | emojify }}
     </div> -->
-    <h3 class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">{ i18n "awards" | default "Awards" }}</h3>
+    <h3 class="mb-6 p-6 text-3xl font-bold text-gray-900 dark:text-white">{{ i18n "awards" | default "Awards" }}</h3>
   
     <!-- 4. 每个 item 之间间距放大到 gap-6 -->
     <div class="w-full p-6 flex flex-col gap-1">
