--- a/layouts/partials/blox/resume-awards.html
+++ b/layouts/partials/blox/resume-awards.html
@@ -13,7 +13,7 @@
 {{/* 可选：允许通过 block.design.date_format 配置日期格式 */}}
 {{ $dateFmt := $block.design.date_format | default "2006-01" }}
 
-<div class="w-full flex flex-col gap-6 items-center">
+<div class="w-full flex flex-col gap-6 items-center mx-auto">
   <!-- <div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center"> -->
 
     <!-- 1. 保留原 block title -->
