--- a/layouts/partials/blox/resume-awards.html
+++ b/layouts/partials/blox/resume-awards.html
@@ -12,8 +12,9 @@
 
 {{/* 可选：允许通过 block.design.date_format 配置日期格式 */}}
 {{ $dateFmt := $block.design.date_format | default "2006-01" }}
+<div class="flex flex-col items-center max-w-prose mx-auto">
 
-<div class="w-full flex flex-col gap-6 items-center mx-auto">
+<div class="w-full flex flex-col gap-6">
   <!-- <div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center"> -->
 
     <!-- 1. 保留原 block title -->
@@ -53,5 +54,6 @@
       {{ end }}
     </div>
   </div>
+</div>
   
   
