--- a/layouts/partials/blox/academic-service.html
+++ b/layouts/partials/blox/academic-service.html
@@ -23,8 +23,8 @@
 
 <!-- <div class="flex flex-col items-center w-full px-4 md:max-w-prose mx-auto gap-4 justify-center"> -->
 <!-- <div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center"> -->
-<div class="w-full flex flex-col gap-6">
-
+<div class="flex flex-col items-center max-w-prose mx-auto">
+  <div class="w-full flex flex-col gap-4">
   <h3 class="mb-6 p-6 text-3xl font-bold text-gray-900 dark:text-white">{{ i18n "academic service" | default "Academic Service" }}</h3>
   
   <div class="w-full p-6 flex flex-col gap-3">
@@ -39,4 +39,5 @@
       </div>
     {{ end }}
   </div>
+</div>
 </div>
