--- a/layouts/partials/blox/academic-service.html
+++ b/layouts/partials/blox/academic-service.html
@@ -23,11 +23,10 @@
 
 <!-- <div class="flex flex-col items-center w-full px-4 md:max-w-prose mx-auto gap-4 justify-center"> -->
 <!-- <div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center"> -->
-<div class="flex flex-col items-center max-w-prose mx-auto">
+<div class="flex flex-col p-6 items-center max-w-prose mx-auto">
   <div class="w-full flex flex-col gap-2">
-  <h3 class="mb-6 p-6 text-3xl font-bold text-gray-900 dark:text-white">{{ i18n "academic service" | default "Academic Service" }}</h3>
-  
-    {{ range $services }}
+  <h3 class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">{{ i18n "academic service" | default "Academic Service" }}</h3>
+      {{ range $services }}
       <div class="grid grid-cols-1 md:grid-cols-[minmax(auto,200px),1fr] gap-2 md:gap-4">
         <div class="font-semibold text-gray-900 dark:text-white break-words md:truncate">
           {{ .title | markdownify | emojify }}
