--- a/layouts/partials/blox/resume-awards.html
+++ b/layouts/partials/blox/resume-awards.html
@@ -49,7 +49,7 @@
                   - flex, items-center, justify-center: These classes center the emoji within its fixed-width box.
                 */}}
                 <div class="emoji-container w-7 mr-2 flex-shrink-0 flex items-center justify-center">
-                  <span>{{ $emoji }}</span> {{ Wrapping in a span is optional but can sometimes help with precise alignment or styling }}
+                  <span>{{ $emoji }}</span> {{/* Wrapping in a span is optional but can sometimes help with precise alignment or styling */}}
                 </div>
                 <div class="text-content-container flex-grow">
                   <p class="font-bold text-black dark:text-white">
